--- a/maddogutilities/src/main/res/values/attrs.xml
+++ b/maddogutilities/src/main/res/values/attrs.xml
@@ -3,4 +3,8 @@
     <declare-styleable name="SquareImageView">
         <attr name="siv_useDimensionHorizontal" format="boolean" />
     </declare-styleable>
+
+    <declare-styleable name="VerticalTextView">
+        <attr name="vtv_alignBottomInStart" format="boolean" />
+    </declare-styleable>
 </resources>
