--- a/app/src/main/res/layout/activity_dummy.xml
+++ b/app/src/main/res/layout/activity_dummy.xml
@@ -30,6 +30,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="IMAGE LOADER" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_dummy_bolder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="BOLDER" />
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
