--- a/app/src/main/res/layout/activity_dummy.xml
+++ b/app/src/main/res/layout/activity_dummy.xml
@@ -1,41 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.maddog05.sampleutils.DummyActivity">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_dummy_photo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="PHOTOS" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_dummy_numbers"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="NUMBERS" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_dummy_image_loader"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="IMAGE LOADER" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_dummy_bolder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="BOLDER" />
-    </LinearLayout>
-
-</androidx.core.widget.NestedScrollView>
+</RelativeLayout>
